--- a/app/views/filters/_form.html.haml
+++ b/app/views/filters/_form.html.haml
@@ -4,13 +4,14 @@
   = display_errors f
 
   .filters#filters{value: @filter.id}
-    = f.input :name, :label => 'Name'
-    = f.input :text, :label => 'Text',:as => :string, :wrapper_html => { :class => "inline_field_wrapper" }
-    = f.input :from_date, :required => false, :input_html => { data: {behaviour: "datepicker"}, :class => 'float:left;'}, :as => :string
-    = f.input :to_date, :required => false, :input_html => { data: {behaviour: "datepicker"}}, :as => :string
-    = f.association :content_types, :collection => @content_types, :label => 'Content Type', :prompt => '-- Please select content type --', :input_html => {:class => 'span5'}
-    = f.association :media_types, :collection => @media_types, :label => 'Media Type', :prompt => '-- Please select media type --', :input_html => {:class => 'span5'}
-    = f.association :languages, :collection => @languages, :label => 'Language', :prompt => '-- Please select language --', :input_html => {:class => 'span5'}
+    = f.input :name, label: t('ui.content.name')
+    = f.input :text, label: t('ui.content.text'), as: :string, wrapper_html: { :class => "inline_field_wrapper" }
+    = f.input :from_date, label: t('ui.content.from_date'), required: false, input_html: { data: {behaviour: "datepicker"}, class: 'float:left;'}, as: :string
+    = f.input :to_date, label: t('ui.content.to_date'), required: false, input_html: { data: {behaviour: "datepicker"}}, as: :string
+    = f.association :content_types, :collection => @content_types, label: t('ui.content.content_type'), prompt: "-- #{t('ui.instructions.select_ct')} --", :input_html => {:class => 'span5'}
+    = f.association :media_types, :collection => @media_types, label: t('ui.content.media_type'), prompt: "-- #{t('ui.instructions.select_mt')} --", :input_html => {:class => 'span5'}
+    = f.association :languages, :collection => @languages, label: t('ui.content.language'), prompt: "-- #{t('ui.instructions.select_language')} --", :input_html => {:class => 'span5'}
+    =t('ui.content.catalogs')
     %input#selected_catalogs{:name => "selected_catalogs", :type => "hidden", :value => ""}
     #catalogs
   %hr.soften
