--- a/app/views/filters/show.html.haml
+++ b/app/views/filters/show.html.haml
@@ -1,26 +1,26 @@
 %header.subhead#overview
-  %h2 Filter
+  %h2
+    =t('ui.content.filter')
   .subnav
     %ul.nav.nav-pills
       -if can?(:update, @filter)
         %li
-          = link_to "Edit", edit_filter_path(@filter)
+          = link_to t('ui.actions.edit'), edit_filter_path(@filter)
       -if can?(:destroy, @filter)
         %li
-          = link_to "Destroy", filter_path(@filter), :class => 'label label-important', :confirm => 'Are you sure?', :method => :delete
+          = link_to t('ui.actions.delete'), filter_path(@filter), :class => 'label label-important', :confirm => 'Are you sure?', :method => :delete
       -if can?(:read, @filter)
         %li
-          = link_to "View All", filters_path
+          = link_to t('ui.actions.view_all'), filters_path
 
 %section.well
   %p
-    %strong Filter:
-  = display_show_item('Name', @filter.name)
-  = display_show_item('Text', @filter.text)
-  = display_show_item('From date', @filter.from_date)
-  = display_show_item('To date', @filter.to_date)
-  = display_show_item('Content Type', @filter.content_types.first.try(:name))
-  = display_show_item('Media Type', @filter.media_types.first.try(:name))
-  = display_show_item('Language', @filter.languages.first.try(:language))
-  = display_show_item('Created', @filter.created_at.to_s(:long_ordinal))
-  = display_show_item('Updated', @filter.updated_at.to_s(:long_ordinal))
+  = display_show_item(t('ui.content.name'), @filter.name)
+  = display_show_item(t('ui.content.text'), @filter.text)
+  = display_show_item(t('ui.content.from_date'), @filter.from_date)
+  = display_show_item(t('ui.content.to_date'), @filter.to_date)
+  = display_show_item(t('ui.content.content_type'), @filter.content_types.first.try(:name))
+  = display_show_item(t('ui.content.media_type'), @filter.media_types.first.try(:name))
+  = display_show_item(t('ui.content.text'), @filter.languages.first.try(:language))
+  = display_show_item(t('ui.content.created'), @filter.created_at.to_s(:long_ordinal))
+  = display_show_item(t('ui.content.updated'), @filter.updated_at.to_s(:long_ordinal))
