--- a/app/views/users/my_sign_in.html.haml
+++ b/app/views/users/my_sign_in.html.haml
@@ -1,4 +1,4 @@
 %header.subhead#overview
 %span.tab
   %span.tab
-    = link_to 'Click here to sign in', "http://archivesupport.kbb1.com/home/kbmedia?redirect_url=#{APP_CONFIG['library_url']}", :id => "sign_in_link"
+    = link_to t('ui.actions.click_to_login'), "http://archivesupport.kbb1.com/home/kbmedia?redirect_url=#{APP_CONFIG['library_url']}", :id => "sign_in_link"
