Adding translation to user reports

--- a/app/views/layouts/_navigation.html.haml
+++ b/app/views/layouts/_navigation.html.haml
@@ -20,7 +20,7 @@
         = link_to t('ui.sidebar.labels'), labels_path
       -if can?(:show_user_logins, :report)
         %li
-          = link_to t('ui.sidebar.reports'), show_user_logins_reports_path
+          = link_to t('ui.report.reports'), show_user_logins_reports_path
 
 
     .btn-group{class: 'float-button-group' }
