Fixing the title

--- a/app/views/layouts/_sidebar.html.haml
+++ b/app/views/layouts/_sidebar.html.haml
@@ -15,5 +15,5 @@
 
 .well{id:'reports'}
   %ul.nav.nav-list
-    %li= do_nav_link('Library', show_user_logins_reports_path,false)
+    %li= do_nav_link('Users', show_user_logins_reports_path,false)
 
