--- a/app/views/filters/show.html.haml
+++ b/app/views/filters/show.html.haml
@@ -1,17 +1,27 @@
 %header.subhead#overview
   %h2
-    =t('ui.content.filter')
+    -if @filter.template
+      =t('ui.content.template')
+    -else
+      =t('ui.content.filter')
   .subnav
     %ul.nav.nav-pills
-      -if can?(:update, @filter)
-        %li
-          = link_to t('ui.actions.edit'), edit_filter_path(@filter)
-      -if can?(:destroy, @filter)
-        %li
-          = link_to t('ui.actions.delete'), filter_path(@filter), :class => 'label label-important', :confirm => 'Are you sure?', :method => :delete
       -if can?(:read, @filter)
-        %li
-          = link_to t('ui.actions.view_all'), filters_path
+        -if @filter.template
+          %li
+            = link_to t('ui.actions.back_to_templates'), template_index_filters_path
+        -else
+          %li
+            = link_to t('ui.actions.view_all'), filters_path
+
+      -if can?(:create_template, @filter)
+        -if can?(:update, @filter)
+          %li
+            = link_to t('ui.actions.edit'), edit_filter_path(@filter)
+        -if can?(:destroy, @filter)
+          %li
+            = link_to t('ui.actions.delete'), filter_path(@filter), :class => 'label label-important', :confirm => 'Are you sure?', :method => :delete
+
 
 %section.well
   %p
@@ -21,6 +31,6 @@
   = display_show_item(t('ui.content.to_date'), @filter.to_date)
   = display_show_item(t('ui.content.content_type'), @filter.content_types.first.try(:name))
   = display_show_item(t('ui.content.media_type'), @filter.media_types.first.try(:name))
-  = display_show_item(t('ui.content.text'), @filter.languages.first.try(:language))
+  = display_show_item(t('ui.content.language'), @filter.languages.first.try(:language))
   = display_show_item(t('ui.content.created'), @filter.created_at.to_s(:long_ordinal))
   = display_show_item(t('ui.content.updated'), @filter.updated_at.to_s(:long_ordinal))
