--- a/app/views/filters/show.html.haml
+++ b/app/views/filters/show.html.haml
@@ -20,6 +20,7 @@
   = display_show_item(t('ui.content.text'), @filter.text)
   = display_show_item(t('ui.content.from_date'), @filter.from_date)
   = display_show_item(t('ui.content.to_date'), @filter.to_date)
+  = display_show_item(t('ui.content.download_to'), get_dowload_to_text(@filter))
   = display_show_item(t('ui.content.content_type'), @filter.content_types.first.try(:name))
   = display_show_item(t('ui.content.media_type'), @filter.media_types.first.try(:name))
   = display_show_item(t('ui.content.language'), @filter.languages.first.try(:language))
