Adding sort option to users report view

--- a/app/assets/stylesheets/user.css.scss
+++ b/app/assets/stylesheets/user.css.scss
@@ -228,3 +228,15 @@ li.nav-header{
   float: right
 }
 
+th .current {
+  padding-right: 12px;
+}
+
+th .asc:after {
+  content: "▲";
+
+}
+
+th .desc:after {
+  content: "▼";
+}
